# poetry2nix_demo

./: default.nix  pyproject.toml  readme.md  shell.nix
imgapp/: __init__.py
