[tool.poetry]
name = "imgapp"
version = "0.1.0"
description = ""
authors = ["Mark Ruvald Pedersen <mped@oticon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Pillow = "^9.2.0"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
imgapp = 'imgapp:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
